# codevolution

./: .gitignore  README.md  pyproject.toml
codevolution/: __main__.py  archive.py  baseline.py  claude.py  config.py  context.py  evaluate.py  loop.py  reward.py  types.py  worktree.py
docs/design/: HLD.md
docs/design/decisions/: ADR-001-evolutionary-search-over-rl.md  ADR-002-scs-over-evolution-v1.md
docs/design/specs/: action-policy.md  archive.md  context-engineering.md  evaluation-tiers.md  feedback-loop.md  reward-model.md  safety.md  selection.md
tests/: conftest.py  test_archive.py  test_config.py  test_context.py  test_evaluate.py  test_loop.py  test_reward.py
tests/fixtures/: sample_config.yaml
tests/fixtures/toy_repo/: bench.sh
tests/fixtures/toy_repo/src/: fib.py
tests/fixtures/toy_repo/tests/: test_fib.py
